--- a/DAY 11/views/index.ejs
+++ b/DAY 11/views/index.ejs
@@ -15,10 +15,13 @@
     <button type="submit" value="fish" name="choice">🐟</button>
   </form>
   <div id="recipeContainer" class="hidden">
+    
+ if (!recipe) { %>
+  <h2>Pick your favourite taco ingredient 👆</h2>
+<% } else { %>
+  <h2><%= recipe.name %></h2>
+<% } 
 
-    <!-- If no recipe yet, show: -->
-    <h2>Pick your favourite taco ingredient 👆</h2>
-    <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
 
     <h3>Ingredients:</h3>
     <ul id="ingredientsList">
